--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,5 +1,6 @@
 # Skills
-
+- skill: HTML
+  description: I learned all the internet things! 
 # Education
 - skill: Education
   description: Developed and maintained various conference talks, online training, and in-person trainings covering various topics including Git, GitHub, and Open Source.
